# spotlight

./: CMakeLists.txt  README.md  build.sh  features.txt  launch.sh
src/: Spotlight.cpp  Spotlight.h  main.cpp
src/actions/: actions.cpp  actions.h  search.cpp  search.h
src/searches/: apps.cpp  apps.h  searches.cpp  searches.h  settings.cpp  settings.h
src/spotlightapps/: spotlightapp.h  utils.cpp  utils.h
src/spotlightapps/demo/: demoapp.cpp  demoapp.h
testscripts/: find_applications.py
